RESOLVED FIXED270281
List box scrollbars do not match the used color scheme
https://bugs.webkit.org/show_bug.cgi?id=270281
Summary List box scrollbars do not match the used color scheme
Aditya Keerthi
Reported 2024-02-28 21:07:52 PST
``` <style> select { color-scheme: dark; } </style> <select multiple> <option>Apple</option> <option>Banana</option> <option>Kiwi</option> <option>Orange</option> <option>Pear</option> <option>Strawberry</option> </select> ``` A light scrollbar is used, when a dark scrollbar is expected.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-28 21:08:13 PST
Aditya Keerthi
Comment 2 2024-02-28 21:15:41 PST
EWS
Comment 3 2024-02-29 10:58:10 PST
Committed 275505@main (d28e96e8be48): <https://commits.webkit.org/275505@main> Reviewed commits have been landed. Closing PR #25277 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.